# fact-repetition

./: .gitattributes  .gitignore  LICENSE  README.md  Untitled.ipynb  alembic.ini  allennlp_train.sh  baseline.py  build_lda.py  config.json  create_snapshot_v2.py  db.py  download.py  environment.yaml  extract_diagnostic_card_set.py  extract_diagnostic_cards.py  extract_matthew_cards.py  facts.csv  hlr.html  index.html  learnsphere-transform.ipynb  metrics.py  n_users_and_n_records.py  new_web.py  note.md  protobowl.py  pyproject.toml  requirements.txt  retention.py  retention_features.h5  retention_pytorch.py  rnn.sh  run.slurm  run_build_lda.py  scheduler.py  service.txt  setup.py  sim.py  sys_metrics.py  test_web.ipynb  (+8 more)
alembic/: env.py
backend/: environment.yaml
blog/: 2020-10-14-karl.md
configs/: baseline.jsonnet  hf_config.json  karl_bert.jsonnet  karl_model.jsonnet  retention_allennlp.jsonnet
data/: diagnostic_questions.pkl
fact/: moving_avg_web.py  util.py  web.py
karl/: baseline.py  db.py  evaluate.py  figures.py  fret.py  fsrs.py  lda.py  metrics.py  models.py  new_retention.py  new_scheduler.py  new_tests.py  new_util.py  new_web.py  nice_format.py  old_models.py  reproduce_feature_vectors.py  retention_utils.py  retention_web.py  scheduler.py  scheduler_v2.py  sensitivity.py  simulation.py  slurm_build_lda.py  test_stats_leaderboard.py  unit_tests.py  util.py  web.py
retention/: bert_allennlp_v1.0.0.rc1.jsonnet  bert_model.jsonnet  data.py  model.py
scripts/: download.py  karl_train.sh  run.slurm  slurm_build_lda.py  slurm_karl_train.sh  (+2 more)
(+177 files in other folders)
