[tool.poetry]
name = "scheduler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.3"
transformers = "^4.19.1"
torch = "^1.11.0"
fastapi = "^0.78.0"
spacy = "^3.3.0"
tables = "^3.7.0"
joblib = "^1.1.0"
msgpack-numpy = "^0.4.7"
msgpack = "^1.0.3"
requests = "^2.27.1"
tqdm = "^4.64.0"
python-dateutil = "^2.8.2"
pytz = "^2022.1"
SQLAlchemy = "^1.4.36"
altair = "^4.2.0"
uvicorn = "^0.17.6"
alembic = "^1.7.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
